# Paean

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindCUB.cmake
docker/: Dockerfile.paean-ubuntu2004-chn.dockerfile  Dockerfile.paean-ubuntu2004.dockerfile  demo_build.sh  demo_exec.sh
include/: bin.h  bin_assign_kernel.cuh  bin_calc_kernel.cuh  bisect.cuh  cub_sort.cuh  fusion.h  incgammabeta.cuh  parse.h  util.h
input/: length_table.csv
input/csv/: A3SS.annotation.csv  A5SS.annotation.csv  RI.annotation.csv
input/gff3/: A5SS.sorted.gff3  RI.sorted.gff3
src/: cub_sort.cu  fusion.cpp  gene.cu  parse.cpp
